# 1d_gdm_paper

./: README.md
ai/: main.py  pyproject.toml  requirements.txt  res.json  vis.ipynb
fe/: bun.lockb  package.json  tsconfig.json
fe/src/: app.html
fe/src/routes/: +page.svelte  Header.svelte  stores.ts
fe/src/routes/detail/: +page.svelte
