[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.6.4",
    "denoising-diffusion-pytorch>=2.1.1",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pygments>=2.18.0",
    "requests>=2.32.3",
]
